--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-image: faeeria/pf2-fr-foundry-builder:0.314
+image: faeeria/pf2-fr-foundry-builder:0.3.14.15
 
 essai:
     stage: build
     script:
-        - ls
+        - git status
