--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,8 @@ image: registry.gitlab.com/pathfinder-fr/foundryvtt-pathfinder2-fr
 essai:
     stage: build
     script:
-        - pwd
-        - cd / && wget https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
-        - unzip pf2e.zip?job=build && mv pf2e/packs /packs
-        - ls
+        - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
+        - unzip -q pf2e.zip?job=build && mv pf2e/packs /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/packs
         - cd scripts
         - bash update.sh
         - git status
