--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ essai:
     script:
         - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
         - unzip -q pf2e.zip?job=build && mv pf2e/packs /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/packs
+        - cd /builds/pathfinder-fr/ && git pull https://gitlab.com/pathfinder-fr/pf2-data-fr.git
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
         - bash update.sh
         - git status
