--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: registry.gitlab.com/pathfinder-fr/foundryvtt-pathfinder2-fr
 
-essai:
+build:
     stage: build
     script:
         - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
@@ -8,4 +8,5 @@ essai:
         - cd /builds/pathfinder-fr/ && git clone https://gitlab.com/pathfinder-fr/pf2-data-fr.git
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
         - bash update.sh
-        - git status
+    only:
+        - merge_requests
