--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 before_script:
     - git config --global user.email "pf2.fr.builder@gmail.com" && git config --global user.name "PF2FR Builder"
 
-build-pack:
+build:pack:
     stage: build
     script:
         # download latest foundry module data into "packs" directory
@@ -27,9 +27,9 @@ build-pack:
             - data/*.md
             - module.json
 
-build-data:
+build:data:
     stage: build
-    needs: ['build-pack']
+    needs: ['build:pack']
     script:
         # clone pf2-data-fr repository
         - cd - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/pf2-data-fr && git clone https://gitlab.com/pathfinder-fr/pf2-data-fr.git .
@@ -43,16 +43,16 @@ build-data:
         paths:
             - pf2-data-fr
 
-deploy-pack:
+deploy:pack:
     stage: deploy
-    needs: ['build-pack']
+    needs: ['build:pack']
     script:
         # update package version and commit & push changes
         - bash update-version-ci.sh
 
-deploy-data:
+deploy:data:
     stage: deploy
-    needs: ['build-data']
+    needs: ['build:data']
     script:    
         # commit & push changes
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/pf2-data-fr && git add -A && git commit -m "Automatic data update" && git push -o ci.skip https://root:$ACCESS_TOKEN@gitlab.com/pathfinder-fr/pf2-data-fr.git
