--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,14 +9,14 @@ before_script:
     - git config --global user.email "pf2.fr.builder@gmail.com" && git config --global user.name "PF2FR Builder"
 
 prepare:
-    state: prepare
+    stage: prepare
     script:
         # download latest foundry module data into "packs" directory
         - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
         - unzip -q pf2e.zip?job=build && mv pf2e/packs /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/packs
     artifacts:
         paths:
-            - packs
+            - packs/
 
 build:babele:
     stage: build
