--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,13 @@ prepare:
         # download latest foundry module data into "packs" directory
         - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
         - unzip -q pf2e.zip?job=build && mv pf2e/packs /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/packs
+        # run update-prepare-ci script    
+        - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
+        - bash update-prepare-ci.sh
     artifacts:
         paths:
             - packs/
+            - data/
 
 build:babele:
     stage: build
