--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,40 +13,41 @@ prepare:
         # download latest foundry module data into "packs" directory
         - cd / && wget -q https://gitlab.com/hooking/foundry-vtt---pathfinder-2e/-/jobs/artifacts/release/raw/pf2e.zip?job=build
         - unzip -q pf2e.zip?job=build && mv pf2e/packs /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/packs
-        # run update-prepare-ci script    
+        # run prepare script    
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
-        - bash update-prepare-ci.sh
+        - bash build-ci-prepare.sh
     artifacts:
         paths:
             - packs/
             - data/
         expire_in: 20 minutes
 
-build:babele:
+build:module:
     stage: build
     needs: ['prepare']
     script:
-        # run update script
+        # run update-module script
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
-        - bash update-ci.sh
-        # update package version and commit & push changes
-        - bash update-version-ci.sh
-    only:
-        changes:
-            # never triggered
-            - toto.sh
+        - bash build-ci-module.sh
+    rules:
+        # TEMPORAIRE uniquement si l'on se trouve sur la branche "xxx"
+        - if: '$CI_COMMIT_BRANCH == "xxx"'
 
-build:data:
+build:pf2-data-fr:
     stage: build
     needs: ['prepare']
     script:
         # clone pf2-data-fr repository
-        - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr && git clone https://gitlab.com/pathfinder-fr/pf2-data-fr.git
-        # run update-data script    
+        - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr
+        - git clone https://gitlab.com/pathfinder-fr/pf2-data-fr.git
+        # run update-pf2-data-fr script    
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
-        - bash update-data.sh
+        - bash build-ci-pf2datafr.sh
         # commit & push changes
-        - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/pf2-data-fr && git add -A && git commit -m "Automatic data update" && git push -o ci.skip https://root:$ACCESS_TOKEN@gitlab.com/pathfinder-fr/pf2-data-fr.git
-    only:
-        refs:
-            - pf2-data-fr
+        - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/pf2-data-fr
+        - git add -A
+        - git commit -m "Automatic data update"
+        - git push -o ci.skip https://root:$ACCESS_TOKEN@gitlab.com/pathfinder-fr/pf2-data-fr.git
+    rules:
+        # uniquement si l'on se trouve sur la branche "pf2-data-fr"
+        - if: '$CI_COMMIT_BRANCH == "pf2-data-fr"'
