--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,13 @@
 image: registry.gitlab.com/pathfinder-fr/foundryvtt-pathfinder2-fr
 
+variables:
+    CI_BUILD_MODULE:
+        value: false
+        description: "Indique que le module Foundry doit être généré. Par défaut le module n'est pas généré."
+    CI_DEPLOY_MODULE:
+        value: true
+        description: "Indique que le module Foudry généré doit être déployé. Uniquement valide si CI_BUILD_MODULE vaut true. Utile pour tester la génération du module sans la déployer."
+
 stages:
     - prepare
     - build
@@ -30,8 +38,7 @@ build:module:
         - cd /builds/pathfinder-fr/foundryvtt-pathfinder2-fr/scripts
         - bash build-ci-module.sh
     rules:
-        # TEMPORAIRE uniquement si l'on se trouve sur la branche "xxx"
-        - if: '$CI_COMMIT_BRANCH == "xxx"'
+        - if: '$CI_BUILD_MODULE == "true"'
 
 build:pf2-data-fr:
     stage: build
