mise à jour descriptions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,10 @@ image: registry.gitlab.com/pathfinder-fr/foundryvtt-pathfinder2-fr
 variables:
     CI_BUILD_MODULE:
         value: "false"
-        description: "Indique que le module Foundry doit être généré. Par défaut le module n'est pas généré."
+        description: "Indique si le module Foundry doit être généré. Indiquez true pour générer le module."
     CI_DEPLOY_MODULE:
         value: "true"
-        description: "Indique que le module Foudry généré doit être déployé. Uniquement valide si CI_BUILD_MODULE vaut true. Utile pour tester la génération du module sans la déployer."
+        description: "Indique si le module Foudry généré doit être déployé. Uniquement valide si CI_BUILD_MODULE vaut true. Passez cette variable à false pour tester la génération du module sans la déployer."
 
 stages:
     - prepare
